# pod_monitor

./: app.py  config.yaml  pyproject.toml  requirements.txt
pod_monitor/: __init__.py  __main__.py  ai_analyzer.py  config.py  kubectl_client.py  main.py  model.py  models.py  monitor.py  ssh_client.py  ui.py  utils.py
pod_monitor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: docker-compose-test.yaml  individual-test.py  log_generator.sh  performance-test.py  test-pod.yaml  test_basic.py  test_mock.py
